# persephone

./: .eslintrc.json  .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  README.md  electron-builder.yml  forge.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.renderer.config.ts
.claude/agents/: userdoc.md  (+1 more)
assets/: mcp-api-guide.md  mcp-res-graph.md  mcp-res-links.md  mcp-res-notebook.md  mcp-res-pages.md  mcp-res-scripting.md  mcp-res-todo.md  mcp-res-ui-push.md  snip-overlay.html
doc/: README.md  active-work.md  proposed-structure.md  refactoring-tasks-2.md  refactoring-tasks.md
docs/: browser.md  editors.md  encryption.md  getting-started.md  grid-editor.md  index.md  mcp-setup.md  notebook.md  scripting.md  shortcuts.md  tabs-and-navigation.md  whats-new.md
js-notepad-scripts/: component-dep.js  module-dep.js  package-dep.js
launcher/: Cargo.toml  build.rs
launcher/src/: main.rs
mockups/: mcp-inspector-connected-resources.html  mcp-inspector-connected-tools.html  mcp-inspector-connections.html  mcp-inspector-disconnected.html  mcp-inspector-error.html  mcp-inspector-stdio.html
patches/: monaco-editor+0.52.2.patch
persephone-scripts/: component-dep.js  module-dep.js  package-dep.js
qa/: README.md  mcp-test-create-page.md  mcp-test-execute-script.md  mcp-test-page-operations.md  mcp-test-ui-push.md
scripts/: build-prod.mjs  vmp-sign.mjs
snip-tool/: Cargo.toml  build.rs
snip-tool/src/: capture.rs  main.rs  overlay.rs
src/: app.d.ts  index.tsx  main-setup.ts  main.ts  preload-webview.ts  preload.ts  renderer.tsx
(+1566 files in other folders)
